add load tests and add gracefully shutdown
